RESOLVED FIXED104561
WebKitWebViewBase produces a warning if compiled with gcc
https://bugs.webkit.org/show_bug.cgi?id=104561
Summary WebKitWebViewBase produces a warning if compiled with gcc
Alberto Garcia
Reported 2012-12-10 08:10:03 PST
The webkit_web_view_base_get_type() prototype uses C++ syntax that produces a warning when compiled with gcc: WebKitWebViewBase.h:68:1: warning: function declaration isn't a prototype [-Wstrict-prototypes]
Attachments
Patch (1.16 KB, patch)
2012-12-10 08:18 PST, Alberto Garcia
mrobinson: review+
webkit.review.bot: commit-queue-
Patch v2 (1.29 KB, patch)
2012-12-10 08:56 PST, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2012-12-10 08:18:46 PST
WebKit Review Bot
Comment 2 2012-12-10 08:49:35 PST
Comment on attachment 178558 [details] Patch Rejecting attachment 178558 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 /mnt/git/webkit-commit-queue/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/15227688
Alberto Garcia
Comment 3 2012-12-10 08:56:01 PST
Created attachment 178563 [details] Patch v2 Oops, I removed the "Reviewed by" line from the ChangeLog by mistake. Here's the new patch.
WebKit Review Bot
Comment 4 2012-12-10 08:59:10 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Review Bot
Comment 5 2012-12-10 09:15:12 PST
Comment on attachment 178563 [details] Patch v2 Clearing flags on attachment: 178563 Committed r137164: <http://trac.webkit.org/changeset/137164>
WebKit Review Bot
Comment 6 2012-12-10 09:15:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.