WebKitWebViewBase produces a warning if compiled with gcc https://bugs.webkit.org/show_bug.cgi?id=104561

Patch by Alberto Garcia <agarcia@igalia.com> on 2012-12-10
Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/WebKitWebViewBase.h:
since this file can be included from C code, use void to
explicitly specify that webkit_web_view_base_get_type() doesn't
have parameters. Otherwise we get "warning: function declaration
isn't a prototype" with -Wstrict-prototypes.

Canonical link: https://commits.webkit.org/122723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137164 268f45cc-cd09-0410-ab3c-d52691b4dbfc